<resources>
    <string name="app_name">Travelya</string>
    <string name="register_now">Register Now</string>
    <string name="username">User Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_conditions">Password should include:
        \n\t\t\t* 8-16 characters
        \n\t\t\t* At least one special character
        \n\t\t\t* At least one numeric character</string>
    <string name="log_in">Log In</string>
    <string name="register_now_hint">Doesn\'t Have an Account? Register Now</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="welcome_to_travelya">Welcome to Travelya</string>
    <string name="sign_up_now_to_access_new_account">Sign up now to access new account</string>
    <string name="get_started">Get Started</string>
    <string name="already_have_an_account_log_in">Already have an account? Log In</string>
    <string name="hello">Hello!</string>
    <string name="let_s_find_your_destinaions">Let\'s find your destinaions</string>
    <string name="skip">Skip</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="click_here">👈 Click Here</string>
    <string name="booking_com">Booking.com</string>
    <string name="click_here1">👈 Click Here</string>
    <string name="location_detection">location Detection</string>
    <string name="hotel">Hotel</string>
    <string name="mountain">Mountain</string>
    <string name="waterfall">Waterfall</string>
    <string name="Location_detection">Location Detection</string>
    <string name="sigiriya">Sigiriya</string>
    <string name="lotus_tower">Lotus Tower</string>
    <string name="lotus_tower_also_referred_to_as_colombo_lotus_tower_is_a_351_5_m_tall_tower_located_in_colombo_sri_lanka_it_has_been_called_a_symbolic_landmark_of_sri_lanka">Lotus Tower, also referred to as Colombo Lotus Tower, is a 351.5 m tall tower, located in Colombo, Sri Lanka. It has been called a symbolic landmark of Sri Lanka.</string>
    <string name="sigiriya_or_sinhagiri_is_an_ancient_rock_fortress_located_in_the_northern_matale_district_near_the_town_of_dambulla_in_the_central_province_sri_lanka_it_is_a_site_of_historical_and_archaeological_significance_that_is_dominated_by_a_massive_column_of_granite_approximately_180_m_high">Sigiriya or Sinhagiri is an ancient rock fortress located in the northern Matale District near the town of Dambulla in the Central Province, Sri Lanka. It is a site of historical and archaeological significance that is dominated by a massive column of granite approximately 180 m high.</string>
    <string name="main_register_now">Main Register Now</string>
    <string name="welcome_nback">Welcome\nBack</string>
    <string name="doesn_t_have_an_account_register">Doesn\'t have an Account? Register</string>
    <string name="create_naccount">Create\nAccount</string>
    <string name="register">Register</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="location_identify">Location Identify</string>
    <string name="camera_access">Camera Access</string>
    <string name="gallery_access">Gallery Access</string>
    <string name="image_classify">Image Classify</string>
    <string name="select_image">Select image</string>
    <string name="capturebtn">Capture</string>
    <string name="predictbtn">Predict</string>
    <string name="result">Result:</string>
    <string name="this_waterfall_measures_approximately_25_m_82_ft_in_height_and_cascades_from_an_oval_shaped_concave_rock_outcrop_during_the_local_wet_season_the_waterfall_turns_into_what_is_said_to_resemble_an_areca_flower_with_withering_petals_but_this_is_not_the_case_in_the_dry_season_where_the_flow_of_water_reduces_dramatically_the_falls_form_part_of_the_ravana_ella_wildlife_sanctuary_and_are_located_6_km_3_7_mi_away_from_the_local_railway_station_at_ella_n_n_type_cascade_n_elevation_1_050_m_3_445_ft_n_total_height_25_m_82_ft_n_watercourse_a_tributary_of_kirindi_oya">This waterfall measures approximately 25 m (82 ft) in height and cascades from an oval-shaped concave rock outcrop. During the local wet season, the waterfall turns into what is said to resemble an areca flower with withering petals. But this is not the case in the dry season, where the flow of water reduces dramatically. The falls form part of the Ravana Ella Wildlife Sanctuary, and are located 6 km (3.7 mi) away from the local railway station at Ella.</string>
    <string name="description">Description</string>
    <string name="location">location</string>
    <string name="ravana_ella_falls_n">Ravana Ella Falls\nරාවණා ඇල්ල</string>
    <string name="ramboda_falls_is_109_m_358_ft_high_1_and_the_eleventh_tallest_waterfall_in_sri_lanka_and_the_729th_tallest_waterfall_in_the_world_2_it_is_situated_in_pussellawa_area_on_the_a5_highway_at_ramboda_pass_3_the_waterfall_is_formed_by_the_panna_oya_which_is_a_tributary_of_kothmale_oya_the_falls_have_an_elevation_945_m_3_100_ft_above_sea_level_n_n_type_tiered_n_elevation_345_m_1_132_ft_n_total_height_109_m_358_ft_n_watercourse_panna_oya_a_tributary_of_kotmale_oya">Ramboda Falls is 109 m (358 ft) high and the eleventh tallest waterfall in Sri Lanka and the 729th tallest waterfall in the world. It is situated in Pussellawa area, on the A5 highway at Ramboda Pass. The waterfall is formed by the Panna Oya which is a tributary of Kothmale Oya. The falls have an elevation 945 m (3,100 ft) above sea level.</string>
    <string name="ramboda_waterfall_n">Ramboda Waterfall\nරම්බොඩ දියඇල්ල</string>
    <string name="lover_s_leap_waterfall_also_known_as_lover_s_leap_falls_is_a_popular_waterfall_attraction_for_tourists_and_locals_this_waterfall_makes_for_a_great_place_to_watch_the_sunset_there_are_no_proper_places_to_park_your_vehicle_before_hiking_a_short_distance_through_the_tea_plantation_and_dirt_road_to_the_falls">Lover\'s Leap Waterfall also known as Lover\'s Leap Falls, is a popular waterfall attraction for tourists and locals. This waterfall makes for a great place to watch the sunset. There are no proper places to park your vehicle before hiking a short distance through the tea plantation and dirt road to the falls.</string>
    <string name="lover_s_leap_falls_n">Lover\'s Leap Falls\nආදරවන්තයින්ගේ පිම්ම ඇල්ල</string>
    <string name="bomburu_ella_also_known_as_perawella_falls_is_a_waterfall_at_uva_paranagama_divisional_secretariat_of_sri_lanka_it_is_located_near_the_border_of_nuwara_eliya_and_badulla_districts_approximately_15_km_from_welimada_town_the_fall_is_about_50_m_in_height_and_20_m_in_width_and_consists_of_several_small_waterfalls_grouped_together_1_the_source_of_the_falls_is_a_lake_located_in_the_central_highlands_of_sri_lanka">Bomburu Ella, also known as Perawella Falls, is a waterfall at Uva-Paranagama Divisional Secretariat of Sri Lanka. It is located near the border of Nuwara Eliya and Badulla districts, approximately 15 km from Welimada town. The fall is about 50 m in height and 20 m in width and consists of several small waterfalls grouped together. The source of the falls is a lake located in the central highlands of Sri Lanka.</string>
    <string name="bomburu_ella_waterfall_n">Bomburu Ella Waterfall\nබෝඹුරු ඇල්ල</string>
    <string name="diyaluma_falls_is_220_m_720_ft_high_and_the_second_highest_waterfall_in_sri_lanka_and_619th_highest_waterfall_in_the_world_it_is_situated_6_km_3_7_mi_away_from_koslanda_in_badulla_district_on_colombo_badulla_highway_the_falls_are_formed_by_punagala_oya_a_tributary_of_kuda_oya_which_in_turn_is_a_tributary_of_kirindi_oya">Diyaluma Falls is 220 m (720 ft) high and the second highest waterfall in Sri Lanka and 619th highest waterfall in the world. It is situated 6 km (3.7 mi) away from Koslanda in Badulla District on Colombo-Badulla highway. The falls are formed by Punagala Oya, a tributary of Kuda Oya which in turn, is a tributary of Kirindi Oya.</string>
    <string name="diyaluma_falls_n">Diyaluma Falls\nදියලුම ඇල්ල</string>
    <string name="dunhinda_falls_is_a_waterfall_located_about_5_kilometres_3_1_mi_from_badulla_in_the_lower_central_hills_of_sri_lanka_the_waterfall_which_is_64_metres_210_ft_high_gets_its_name_from_the_smoky_dew_drops_spray_dun_in_sinhala_means_mist_or_smoke_which_surrounds_the_area_at_the_foot_of_the_waterfall_the_fall_is_created_by_the_badulu_oya_which_flows_through_badulla">Dunhinda Falls is a waterfall located about 5 kilometres (3.1 mi) from Badulla in the lower central hills of Sri Lanka. The waterfall, which is 64 metres (210 ft) high, gets its name from the smoky dew drops spray, (Dun in sinhala means mist or smoke) which surrounds the area at the foot of the waterfall.The fall is created by the Badulu Oya which flows through Badulla.</string>
    <string name="dunhinda_falls_n">Dunhinda Falls\nදුන්හිඳ ඇල්ල</string>
    <string name="sri_pada_adam_s_peak_n">Sri Pada / Adam\'s Peak\nශ්‍රී පාදය / ආදම්ගේ කඳු මුදුන</string>
    <string name="adam_s_peak_is_a_2_243_m_7_359_ft_tall_conical_sacred_mountain_located_in_central_sri_lanka_1_2_it_is_well_known_for_the_sri_pada_r_p_da_sinhala_sacred_footprint_a_1_8_m_5_ft_11_in_rock_formation_near_the_summit_whose_name_is_also_used_for_the_mountain_itself_in_buddhist_tradition_the_print_is_held_to_be_the_footprint_of_the_buddha_in_sri_lankan_hindu_tradition_that_of_hanuman_or_shiva_and_in_some_islamic_and_christian_traditions_that_of_adam_or_st_thomas">Adam\'s Peak is a 2,243 m (7,359 ft) tall conical sacred mountain located in central Sri Lanka.[1][2] It is well known for the Sri Pada (Śrī Pāda ; Sinhala: ශ්‍රී පාද, \'sacred footprint\'), a 1.8 m (5 ft 11 in) rock formation near the summit whose name is also used for the mountain itself. In Buddhist tradition the print is held to be the footprint of the Buddha, in Sri Lankan Hindu tradition that of Hanuman or Shiva, and in some Islamic and Christian traditions that of Adam or St. Thomas.</string>
    <string name="pidurutalagala_sinhala_pronounced_piduruta_la_l_straw_plateau_rock_or_previously_mount_pedro_in_english_is_the_highest_mountain_in_sri_lanka_at_2_524_m_8_281_ft_it_is_situated_north_north_east_from_the_town_of_nuwara_eliya_and_is_easily_visible_from_most_areas_of_the_central_province_its_summit_is_home_to_the_central_communications_array_of_the_government_of_sri_lanka_and_armed_forces_and_serves_as_an_important_point_in_the_country_s_radar_system">Pidurutalagala (Sinhala: පිදුරුතලාගල, pronounced [ˌpidurutaˈlaːɡələ], Straw Plateau Rock), or previously Mount Pedro in English, is the highest mountain in Sri Lanka, at 2,524 m (8,281 ft). It is situated North-North-East from the town of Nuwara Eliya and is easily visible from most areas of the Central Province. Its summit is home to the central communications array of the Government of Sri Lanka and armed forces and serves as an important point in the country\'s radar system.</string>
    <string name="bentota_is_a_tourist_attraction_with_a_local_airport_bentota_river_airport_and_a_handful_of_world_class_hotels_it_is_a_destination_for_watersports">Bentota is a tourist attraction, with a local airport (Bentota River Airport) and a handful of world-class hotels. It is a destination for watersports.</string>
    <string name="bentota_beach_n">Benthota Beach\nබෙන්තොට වෙරළ</string>
    <string name="hikkaduwa_is_a_coastal_town_in_south_west_of_sri_lanka_it_s_a_world_famous_beach_holiday_destination_2_well_known_for_its_scenic_beaches_coral_reef_sanctuary_surfing_and_nightlife">Hikkaduwa is a coastal town in south-west of Sri Lanka. It\'s a world famous beach holiday destination,[2] well known for its scenic beaches, coral reef sanctuary, surfing and nightlife.</string>
    <string name="hikkaduwa_beach_n">Hikkaduwa Beach\nහික්කඩුව වෙරළ තීරය</string>
</resources>