<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8EEEC"
    tools:context=".RegisterActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    android:src="@drawable/top_background1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/skip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="335dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="0dp"
                        android:gravity="center"
                        android:onClick="skipRegister"
                        android:padding="8dp"
                        android:text="@string/skip"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="32dp"
                        android:layout_marginRight="32dp"
                        android:text="@string/create_naccount"
                        android:textColor="#3B60BC"
                        android:textSize="40sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <EditText
                    android:id="@+id/reg_username"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/edittext_background"
                    android:drawableStart="@drawable/user_icon"
                    android:drawablePadding="16dp"
                    android:ems="10"
                    android:hint="@string/username"
                    android:inputType="textPersonName"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textColorHint="#756C6C"
                    tools:ignore="TextFields" />

                <EditText
                    android:id="@+id/reg_email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/edittext_background"
                    android:drawableStart="@drawable/email_icon"
                    android:drawablePadding="16dp"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textPersonName"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textColorHint="#756C6C"
                    tools:ignore="TextFields" />

                <EditText
                    android:id="@+id/reg_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/edittext_background"
                    android:drawableStart="@drawable/phone_icon"
                    android:drawablePadding="16dp"
                    android:ems="10"
                    android:hint="@string/mobile_number"
                    android:inputType="textPersonName"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textColorHint="#756C6C"
                    tools:ignore="TextFields" />

                <EditText
                    android:id="@+id/reg_pw"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/edittext_background"
                    android:drawableStart="@drawable/password_icon"
                    android:drawablePadding="16dp"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textColorHint="#756C6C"
                    tools:ignore="TextFields"/>

                <EditText
                    android:id="@+id/pw_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/edittext_background"
                    android:drawableStart="@drawable/password_icon"
                    android:drawablePadding="16dp"
                    android:ems="10"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textColorHint="#756C6C"
                    tools:ignore="TextFields"/>

                <ImageView
                    android:id="@+id/register_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:src="@drawable/btn_arrow2" />



                <TextView
                    android:id="@+id/reghint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:onClick="gologAccount"
                    android:text="@string/already_have_an_account_log_in"
                    android:textAlignment="center"
                    android:textColor="#38608C"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>