<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8EEEC"
    tools:context=".Beach1Activity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView51"
                        android:layout_width="match_parent"
                        android:layout_height="355dp"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/bentota_beach" />

                    <ImageView
                        android:id="@+id/imageView52"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:onClick="backbeach"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/btn_arrow3" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/beach1_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bentota_beach_n"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16sp"
                    android:layout_marginEnd="32dp"/>

                <LinearLayout
                    android:id="@+id/beach1go"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:orientation="horizontal"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16sp"
                    android:layout_marginEnd="256dp"
                    android:clickable="true"
                    android:focusable="true">

                    <ImageView
                        android:id="@+id/beach1_locationicon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/marker2" />

                    <TextView
                        android:id="@+id/beach1_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/location"
                        android:textColor="@color/black"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16sp"
                    android:layout_marginEnd="32dp">

                    <TextView
                        android:id="@+id/beach1description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="8dp"
                        android:text="@string/description"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/beach1details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="8dp"
                        android:text="@string/bentota_is_a_tourist_attraction_with_a_local_airport_bentota_river_airport_and_a_handful_of_world_class_hotels_it_is_a_destination_for_watersports"
                        android:textStyle="normal|bold"
                        android:textColor="@color/black"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>